Creando pantalla detalle docente

--- a/BlackSys/Views/Docentes/ParcialListado.cshtml
+++ b/BlackSys/Views/Docentes/ParcialListado.cshtml
@@ -83,7 +83,7 @@
                            <a class="btn btn-danger btn-sm" href="javascript:confirmDelete('ColorDelete','@item.ColorID')"><span class='glyphicon glyphicon-trash'></span></a>
                        </div>
                    }*@
-            @Html.ActionLink("Detallar", "DetallarArticulo", new { Codigo = item.Id }) |
+            @Html.ActionLink("Mostrar", "Details", new { Id = item.Id }) |
         </td>
         @*<td>
 
