--- a/BlackSys/Views/Shared/_Layout.cshtml
+++ b/BlackSys/Views/Shared/_Layout.cshtml
@@ -210,9 +210,9 @@
                 @RenderBody()
                 <div class="version">
                     <p>
-                        Desarrollado por: BBU Software,Tu informacion en un Clic, CR. Versión: 5.6.0.9 | Todos los Derechos Reservados
+                        Desarrollado por: BMA Developmet,Versión: 3.6 | Todos los Derechos Reservados
                         |  Contáctenos: <i class="fa fa-globe"></i> 
-                        @*<a href="http://www.ld.co.cr/" title="">  http://www.ld.co.cr/ </a>*@
+                     
                         | <i class="fa fa-envelope-o"></i> <a href=""></a>
                         | <i class="clip-phone-4"></i> +(505) 57239560
                     </p>
