--- a/BlackSys/Content/template/layout/css/themes/darkblue.css
+++ b/BlackSys/Content/template/layout/css/themes/darkblue.css
@@ -19,7 +19,7 @@
     .page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-toggle > i {
       color: #bbc1c8; }
     .page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-toggle .badge.badge-default {
-      background-color: #3FD5C0;
+      background-color: #9a7272;
       color: #ffffff; }
     .page-header.navbar .top-menu .navbar-nav > li.dropdown .dropdown-toggle:hover {
       background-color: #9099a3; }
@@ -52,10 +52,10 @@
     .page-header.navbar .top-menu .navbar-nav > li.dropdown-notification .dropdown-menu .dropdown-menu-list > li > a:hover .time {
       background: #e4e4e4; }
     .page-header.navbar .top-menu .navbar-nav > li.dropdown-inbox > .dropdown-toggle > .circle {
-      background-color: #3FD5C0;
+      background-color: #9a7272;
       color: #ffffff; }
     .page-header.navbar .top-menu .navbar-nav > li.dropdown-inbox > .dropdown-toggle > .corner {
-      border-color: transparent transparent transparent #3FD5C0; }
+      border-color: transparent transparent transparent #9a7272; }
     .page-header.navbar .top-menu .navbar-nav > li.dropdown-inbox .dropdown-menu .dropdown-menu-list .subject .from {
       color: #5b9bd1; }
     .page-header.navbar .top-menu .navbar-nav > li.dropdown-tasks .dropdown-menu .dropdown-menu-list .progress {
@@ -146,7 +146,7 @@
     .page-header.navbar .hor-menu .navbar-nav > li.current > a,
     .page-header.navbar .hor-menu .navbar-nav > li.current > a {
       color: white;
-      background: #3FD5C0 !important; }
+      background: #9a7272 !important; }
       .page-header.navbar .hor-menu .navbar-nav > li.active > a > i,
       .page-header.navbar .hor-menu .navbar-nav > li.active > a > i,
       .page-header.navbar .hor-menu .navbar-nav > li.current > a > i,
@@ -154,7 +154,7 @@
         color: #d6d9dd; }
     .page-header.navbar .hor-menu .navbar-nav > li.active .selected,
     .page-header.navbar .hor-menu .navbar-nav > li.current .selected {
-      border-top: 6px solid #3FD5C0; }
+      border-top: 6px solid #9a7272; }
     .page-header.navbar .hor-menu .navbar-nav > li .dropdown-menu {
       box-shadow: 5px 5px rgba(144, 153, 163, 0.2);
       background: #9099a3; }
@@ -210,7 +210,7 @@
     .page-header.navbar .hor-menu.hor-menu-light .navbar-nav > li.current > a,
     .page-header.navbar .hor-menu.hor-menu-light .navbar-nav > li.current > a:hover {
       color: white;
-      background: #3FD5C0; }
+      background: #9a7272; }
       .page-header.navbar .hor-menu.hor-menu-light .navbar-nav > li.active > a > i,
       .page-header.navbar .hor-menu.hor-menu-light .navbar-nav > li.active > a:hover > i,
       .page-header.navbar .hor-menu.hor-menu-light .navbar-nav > li.current > a > i,
@@ -301,14 +301,15 @@
     .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active.open > a,
     .page-sidebar .page-sidebar-menu > li.active > a,
     .page-sidebar .page-sidebar-menu > li.active.open > a {
-      background: #3FD5C0;
-      border-top-color: transparent;
-      color: #ffffff; }
+        background: #9a7272;
+        border-top-color: transparent;
+        color: #ffffff;
+    }
       .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active > a:hover,
       .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active.open > a:hover,
       .page-sidebar .page-sidebar-menu > li.active > a:hover,
       .page-sidebar .page-sidebar-menu > li.active.open > a:hover {
-        background: #3FD5C0; }
+        background: #9a7272; }
       .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active > a > i,
       .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active.open > a > i,
       .page-sidebar .page-sidebar-menu > li.active > a > i,
@@ -407,13 +408,13 @@
     .page-sidebar .page-sidebar-menu.page-sidebar-menu-light > li.active > a,
     .page-sidebar .page-sidebar-menu.page-sidebar-menu-light > li.active.open > a {
       background: #ededed;
-      border-left: 4px solid #3FD5C0;
+      border-left: 4px solid #9a7272;
       color: #666666; }
       .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-light > li.active > a:hover,
       .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-light > li.active.open > a:hover,
-      .page-sidebar .page-sidebar-menu.page-sidebar-menu-light > li.active > a:hover,
+      .page-sidebar .page-sidebar-menu.page-sidebar-menu-lightc > li.active > a:hover,
       .page-sidebar .page-sidebar-menu.page-sidebar-menu-light > li.active.open > a:hover {
-        border-left: 4px solid #3FD5C0;
+        border-left: 4px solid #9a7272;
         background: whitesmoke; }
       .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-light > li.active > a > i,
       .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu.page-sidebar-menu-light > li.active.open > a > i,
@@ -494,11 +495,11 @@
   .page-sidebar-reversed .page-sidebar-menu.page-sidebar-menu-light > li.active > a,
   .page-sidebar-reversed .page-sidebar-menu.page-sidebar-menu-light > li.active.open > a {
     border-left: 0;
-    border-right: 4px solid #3FD5C0; }
+    border-right: 4px solid #9a7272; }
     .page-sidebar-reversed .page-sidebar-menu.page-sidebar-menu-light > li.active > a:hover,
     .page-sidebar-reversed .page-sidebar-menu.page-sidebar-menu-light > li.active.open > a:hover {
       border-left: 0;
-      border-right: 4px solid #3FD5C0; }
+      border-right: 4px solid #9a7272; }
 
 /******
     Page Footer 
@@ -655,7 +656,7 @@ body {
     border-top: 20px double transparent;
     border-bottom: 20px double transparent;
     border-right: 0;
-    border-left: 8px solid #3FD5C0; }
+    border-left: 8px solid #9a7272; }
     .page-sidebar-reversed .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active.open > a > .selected,
     .page-sidebar-reversed .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active > a > .selected,
     .page-sidebar-reversed .page-sidebar .page-sidebar-menu > li.active.open > a > .selected,
@@ -663,17 +664,17 @@ body {
       right: auto;
       left: -8px;
       border-left: 0;
-      border-right: 8px solid #3FD5C0; }
+      border-right: 8px solid #9a7272; }
     .page-container-bg-solid .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active.open > a > .selected,
     .page-container-bg-solid .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active > a > .selected,
     .page-container-bg-solid .page-sidebar .page-sidebar-menu > li.active.open > a > .selected,
     .page-container-bg-solid .page-sidebar .page-sidebar-menu > li.active > a > .selected {
-      border-color: transparent transparent transparent #3FD5C0; }
+      border-color: transparent transparent transparent #9a7272; }
     .page-container-bg-solid.page-sidebar-reversed .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active.open > a > .selected,
     .page-container-bg-solid.page-sidebar-reversed .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu > li.active > a > .selected,
     .page-container-bg-solid.page-sidebar-reversed .page-sidebar .page-sidebar-menu > li.active.open > a > .selected,
     .page-container-bg-solid.page-sidebar-reversed .page-sidebar .page-sidebar-menu > li.active > a > .selected {
-      border-color: transparent #3FD5C0 transparent transparent; }
+      border-color: transparent #9a7272 transparent transparent; }
   .page-sidebar-closed.page-sidebar-fixed .page-sidebar:hover .page-sidebar-menu li > a,
   .page-sidebar .page-sidebar-menu li > a {
     font-weight: 400; }
