--- a/BlackSys/Views/Account/Login.cshtml
+++ b/BlackSys/Views/Account/Login.cshtml
@@ -29,96 +29,94 @@
 </head>
 
 <body class=" login">
-    <div class="logo">
-        <a href="/">
-      
-        </a>
-    </div>
 
+    <br />
+    <br />
     <div class="content">
-    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "login-form", role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-        @Html.ValidationSummary(true, "", new { @class = "text-danger text-title" })
-        <h3 class="form-title">Iniciar Sesion </h3>
-        <div class="alert alert-danger display-hide">
-            <button class="close" data-close="alert"></button>
-            <span> Ingrese su usuario y Contraseña. </span>
+
+        <div class="logo">
+            <a href="/">
+                <img style="width: 200px; height: 100px;" src="~/Imagenes/LogoUcyt.png" class="img-fluid" alt="Responsive image">
+            </a>
         </div>
-        <div class="form-group">            
-            <label class="control-label visible-ie8 visible-ie9">Usuario</label>
-            <div class="input-icon">
-                <i class="fa fa-user"></i>                
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control placeholder-no-fix", placeholder = "Usuario" })                
-            </div>
-            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger text-title" })
-        </div>
-        <div class="form-group">
-            <label class="control-label visible-ie8 visible-ie9">Contraseña</label>
-            <div class="input-icon">
-                <i class="fa fa-lock"></i>                
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control  placeholder-no-fix", placeholder = "Contraseña" })               
-            </div>
-            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger text-title" })
-        </div>
-                <div class="form-actions">
-                    <label class="checkbox">
-                        @Html.CheckBoxFor(m => m.RememberMe)                        
-                        Recordar Contraseña
-                    </label>
-                    
-                    <button type="submit" class="btn green pull-right"> Iniciar </button>
-                </div>
+        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "login-form", role = "form" }))
+        {
+@Html.AntiForgeryToken()
+                @Html.ValidationSummary(true, "", new { @class = "text-danger text-title" })
+                                <h3 class="form-title">Iniciar Sesion </h3>
+                                                <div class="alert alert-danger display-hide">
+                                                    <button class="close" data-close="alert"></button>
+                                                    <span> Ingrese su usuario y Contraseña. </span>
+                                                </div>
+                                                                <div class="form-group">
+                                                                    <label class="control-label visible-ie8 visible-ie9">Usuario</label>
+                                                                    <div class="input-icon">
+                                                                        <i class="fa fa-user"></i>
+                                                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control placeholder-no-fix", placeholder = "Usuario" })
+                                                                    </div>
+                                                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger text-title" })
+                                                                </div>
+                                                                                <div class="form-group">
+                                                                                    <label class="control-label visible-ie8 visible-ie9">Contraseña</label>
+                                                                                    <div class="input-icon">
+                                                                                        <i class="fa fa-lock"></i>
+                                                                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control  placeholder-no-fix", placeholder = "Contraseña" })
+                                                                                    </div>
+                                                                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger text-title" })
+                                                                                </div>
+                                                                                                <div class="form-actions">
+                                                                                                    <label class="checkbox">
+                                                                                                        @Html.CheckBoxFor(m => m.RememberMe)
+                                                                                                        Recordar Contraseña
+                                                                                                    </label>
 
-                <div class="login-options">
-                    
-                    @*<h4>Registrar con</h4>
-                    <ul class="social-icons">
-                        <li>
-                            <a class="facebook" data-original-title="facebook" href="javascript:;"> </a>
-                        </li>
-                        <li>
-                            <a class="twitter" data-original-title="Twitter" href="javascript:;"> </a>
-                        </li>
-                        <li>
-                            <a class="googleplus" data-original-title="Goole Plus" href="javascript:;"> </a>
-                        </li>
-                        <li>
-                            <a class="linkedin" data-original-title="Linkedin" href="javascript:;"> </a>
-                        </li>
-                    </ul>*@
-                </div>
+                                                                                                    <button type="submit" class="btn green pull-right"> Iniciar </button>
+                                                                                                </div>
 
-                @*<div class="forget-password">
-                    <h4>Olvido su Contraseña?</h4>
-                    <p>
-                       Click 
-                        <a href="/Account/Reset" id="forget-password"> aqui </a> para reset de contraseña.
-                    </p>
-                </div>*@
+                                                                                                                <div class="login-options">
 
-                <div class="forget-password">
-                   
-                    <p>
-                       <br />
-                        <br />
-                        <br />
-                        <br />
-                       
-                    </p>
-                </div>
+                                                                                                                    @*<h4>Registrar con</h4>
+                                                                                                                        <ul class="social-icons">
+                                                                                                                            <li>
+                                                                                                                                <a class="facebook" data-original-title="facebook" href="javascript:;"> </a>
+                                                                                                                            </li>
+                                                                                                                            <li>
+                                                                                                                                <a class="twitter" data-original-title="Twitter" href="javascript:;"> </a>
+                                                                                                                            </li>
+                                                                                                                            <li>
+                                                                                                                                <a class="googleplus" data-original-title="Goole Plus" href="javascript:;"> </a>
+                                                                                                                            </li>
+                                                                                                                            <li>
+                                                                                                                                <a class="linkedin" data-original-title="Linkedin" href="javascript:;"> </a>
+                                                                                                                            </li>
+                                                                                                                        </ul>*@
+                                                                                                                </div> @*<div class="forget-password">
+                                                                                                                        <h4>Olvido su Contraseña?</h4>
+                                                                                                                        <p>
+                                                                                                                           Click
+                                                                                                                            <a href="/Account/Reset" id="forget-password"> aqui </a> para reset de contraseña.
+                                                                                                                        </p>
+                                                                                                                    </div>*@
 
+                                                                                                                                <div class="forget-password">
 
-    }
+                                                                                                                                    <p>
+                                                                                                                                        <br />
+                                                                                                                                        <br />
+                                                                                                                                        <br />
+                                                                                                                                        <br />
+
+                                                                                                                                    </p>
+                                                                                                                                </div>}
     </div>
-    @Scripts.Render("~/bundles/jquery")    
-    @Scripts.Render("~/bundles/bootstrap")    
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     <script src="/Content/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
     @Scripts.Render("~/bundles/jquery-plugins")
     <script src="/Content/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
-    <script src="/Content/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>    
+    <script src="/Content/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
     <script src="/Content/plugins/select2/js/select2.full.min.js" type="text/javascript"></script>
-    
+
     <script src="/Content/template/scripts/app.js" type="text/javascript"></script>
     <!-- END THEME GLOBAL SCRIPTS -->
     <!-- BEGIN PAGE LEVEL SCRIPTS -->
