--- a/BlackSys/Views/Shared/_Layout.cshtml
+++ b/BlackSys/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
             <div class="page-logo left">
               
                 <a href="/">
-                    <img style="width: 200px; height: 46px;" src="~/Imagenes/LogoOficina1.jpg" class="img-fluid" alt="Responsive image">
+                    <img style="width: 200px; height: 46px;" src="~/Imagenes/LogoUcyt.png" class="img-fluid" alt="Responsive image">
                     @*<img src="~/Imagenes/LogoOficina1.jpg"  alt="logo" class="logo-default"/>*@
                     @*<img src="~/Content/template/layout/img/logo.png" alt="logo" class="logo-default" />*@
                 </a>
