--- a/BlackSys/Views/Docentes/Details.cshtml
+++ b/BlackSys/Views/Docentes/Details.cshtml
@@ -510,9 +510,11 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-offset-12">
-                                @Html.ActionLink("Agregar Asignatura", "Create", "Docente", new { id = Model.docente.Id }, new { @class = "modal-link btn btn-success" })
+                                @*@Html.ActionLink("Agregar Asignatura", "AddSubject", "Docentes", new { id = Model.docente.Id }, new { @class = "modal-link btn btn-success" })*@
+                                @*@Html.ActionLink("Agregar Asignatura", "AddSubject", "Docentes", href = "javascript:showEditDialog('TblCategoriaArticulo','Edit','@item.Id')")*@
+                                @*<a class="btn btn-default btn-sm" href="javascript:showEditDialog('TblCategoriaArticulo','Edit','@model.docent.Id')"><span class='glyphicon glyphicon-pencil'></span></a>
 
-                            </div>
+                            *@</div>
 
                         </div>
                         <div class="row">
