--- a/BlackSys/Views/Docentes/_AsignaturasDocentes.cshtml
+++ b/BlackSys/Views/Docentes/_AsignaturasDocentes.cshtml
@@ -1,4 +1,20 @@
 ﻿@model List<BlackSys.Models.Dal.ViewDocenteAsignatura>
+<div class="row">
+    <div id="intro" class="col-xs-7">
+
+        @Html.DropDownList("Asignaturas", (IEnumerable<SelectListItem>)ViewBag.Asignaturas, null, new { @class = "form-control" })
+
+    </div>
+
+    <div class="col-xs-1">
+        <button type="button" onclick="AgregarItem()" class="btn btn-primary glyphicon glyphicon-plus"></button>
+    </div>
+
+    @*<div class="col-md-1">
+            <button type="submit" class="btn btn-primary glyphicon glyphicon-save">Guardar</button>
+        </div>*@
+</div>
+
 <table class="table table-striped table-bordered table-hover dt-responsive" id="my-tableDino23" cellspacing="0">
     <thead>
         <tr>
